hphp/hack/test/typecheck/list_destructuring_akany.php.exp
File "list_destructuring_akany.php", line 6, characters 3-13:
  nothing
File "list_destructuring_akany.php", line 7, characters 3-13:
  nothing
File "list_destructuring_akany.php", line 5, characters 3-19:
Invalid assignment (Typing[4357])
File "list_destructuring_akany.php", line 5, characters 3-14:
This expression cannot be destructured with a `list(...)` expression
File "list_destructuring_akany.php", line 4, characters 16-20:
This is `varray_or_darray<arraykey, _>`
