hphp/hack/test/typecheck/list_destructuring_akany.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

function akany(varray $a): void {
  list($a, $b) = $a;
  hh_show($a);
  hh_show($b);
}
